# theWhyKingz

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: the_why_kignz_test.ipynb
src/: whykingz.py
