[tool.poetry]
name = "whykingz"
version = "0.1.0"
description = "Danylo Poliakov test task for theWhyKingz"
authors = ["Danylo Poliakov"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.7"
scipy = "^1.4.1"
numpy = "^1.18.2"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
ipython = "^7.13.0"
jupyterhub = "^1.1.0"
ipykernel = "^5.2.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
